--- a/styles.css
+++ b/styles.css
@@ -403,7 +403,7 @@ text-decoration:none;
     top: 40%;
     background-color: #252A2E;
     padding: 20px;
-    max-swidth: 350px;
+    max-width: 350px;
     left: 50%;
     transform: translate(-50%, -50%);
 }
